# prediction-system

./: .env.example  .gitignore  DECISIONS.md  IMPLEMENTATION_PROGRESS.md  README.md  pyproject.toml
.claude/: launch.json
audit/: __init__.py  checks_decisions.py  checks_pipeline.py  checks_security.py  checks_strategy_integrity.py  report.py
backtest/: cache.py  calibration.py  harness.py
bot_control/: __init__.py  state.py
capital/: eligibility.py
dashboard/: alert.py  app.py  db.py  demo_data.py
db/: connection.py  schema.sql
deploy/: README.md  forward-evidence.env  kalshi-dashboard.service  kalshi-price-feed.service  remote_deploy.sh  setup.sh
edge/: __init__.py  calculator.py
kalshi_client/: __init__.py  auth.py  client.py  exceptions.py  fees.py  models.py  orders.py  tickers.py  urls.py
live_trading/: __init__.py  domain.py  repository.py  risk.py  service.py
monitoring/: __init__.py  run_tracker.py  trend.py
notify/: __init__.py  pushover.py
paper_trading/: __init__.py  engine.py
price_feed/: __init__.py  cache.py  subscriber.py
risk/: __init__.py  circuit_breaker_report.py  circuit_breakers.py  controls.py
scheduler/: crontab.example  crontab.root.example  healthcheck.sh  run_audit.sh  run_observation_refresh.sh  run_pipeline.sh  run_recalibration.sh  run_settlement_cycle.sh
scripts/: analyze_cross_bracket_consistency.py  analyze_dayahead_deficit.py  calibration_trend.py  debias_and_refit_shrinkage.py  demo_circuit_breaker_validation.py  discover_markets.py  fit_calibration_params.py  fit_remaining_scale.py  fit_remaining_scale_by_brier.py  forecast_vs_market.py  generate_alerts.py  investigate_market_edge.py  mark_settled_alerts.py  measure_pipeline_latency.py  refresh_same_day_observations.py  run_audit.py  run_backtest.py  run_backtest_blend.py  run_backtest_by_model.py  run_forward_evidence_collector.py  run_live_execution.py  run_paper_trading.py  (+13 more)
(+120 files in other folders)
