[project]
name = "kalshi-prediction-market"
version = "0.1.0"
description = "Semi-automated signal system for Kalshi daily-temperature markets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49.0.0",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "numpy>=2.5.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kalshi_client", "dashboard", "weather", "edge", "backtest", "sizing", "notify", "monitoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
